docker-k8s-extended/chapter5-k8s/simple-pod.yaml
apiVersion: v1
# k8sのリソースの種類を指定する
kind: Pod
# このリソースの名称として設定されるメタデータ
metadata:
  name: simple-echo
spec:
  containers:
  - name: nginx
    image: gihyodocker/nginx-proxy:latest
    ports:
    - containerPort: 80
  - name: echo
    image: gihyodocker/echo:latest
    ports:
    - containerPort: 8080
