docker-k8s-extended/chapter5-k8s/simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  selector:
    app: echo
    release: summer
  posrts:
    - name: http
      port: 80
